# tvm-vta-llm

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
apps/deploy/: CMakeLists.txt  Makefile  bitstream.py  cpp_deploy.cc  cpp_module_deploy.cpp  python_deploy.py  resnet_export.py
apps/tsim_example/: CMakeLists.txt
apps/tsim_example/hardware/chisel/: build.sbt  pom.xml
apps/tsim_example/hardware/chisel/src/main/scala/accel/: Accel.scala  Compute.scala
apps/tsim_example/hardware/chisel/src/test/scala/dut/: TestAccel.scala
apps/tsim_example/python/: tsim.py
apps/verilator/: build_verilator.sh
apps/verilator/MAC/: CMakeLists.txt  mac_tb.cpp
apps/verilator/add/: CMakeLists.txt
apps/verilator/add/src/: driver.cc
apps/verilator/add/verilog/: add.v  driver.v
blogs/: VerilatorTVM.md
cmake/: VTA.cmake  cross_platform.cmake  tvm_configure.cmake  tvm_verilator.cmake  vta_dpi.cmake
config/: pkg_config.py  test.tcl  vta_config.json  vta_config.py
docs/: TVM_TSIM.md  VerilatorTVM02.md  VerilatorTVM03.md
hardware/chisel/: CMakeLists.txt  Makefile  build.sbt  pom.xml
hardware/chisel/.run/: TestDefaultPynqConfig.run.xml
hardware/chisel/src/main/resources/hls/: ExampleAxis.v
hardware/chisel/src/main/resources/hls/axi4Master/: Axi4Master.v  Axi4Master_AXILiteS_s_axi.v  Axi4Master_gmem_m_axi.v  xaxi4master_hw.h
hardware/chisel/src/main/resources/hls/axilite_example/: AxiliteExample.v  AxiliteExample_BUS_A_s_axi.v
hardware/chisel/src/main/resources/hls/compute/: compute.v  compute_CONTROL_BUS_s_axi.v  compute_acc_mem_V.v  compute_data_port_m_axi.v  compute_mac_muladd_8s_8s_16s_17_1_1.v  compute_mul_14ns_32ns_46_2_1.v  compute_mul_14ns_46ns_60_5_1.v  compute_mul_32ns_14ns_46_2_1.v  compute_mul_46ns_14ns_60_5_1.v  compute_uop_mem_V.v  compute_uop_port_m_axi.v  reset_mem.v
hardware/chisel/src/main/resources/hls/fetch/: Fetch.v  fetch.v  fetch_CONTROL_BUS_s_axi.v  fetch_ins_port_m_axi.v  xfetch_hw.h
hardware/chisel/src/main/resources/hls/load/: load.v  load_CONTROL_BUS_s_axi.v  load_data_port_m_axi.v  load_mul_16s_4ns_16_1_1.v  reset_mem.v
hardware/chisel/src/main/resources/hls/store/: store.v  store_CONTROL_BUS_s_axi.v  store_data_port_m_axi.v
hardware/chisel/src/main/resources/verilog/: VTAAxisDPI.v
hardware/chisel/src/main/scala/dpi/: VTAAxisDPI.scala  VTAHostDPI.scala  VTAMemDPI.scala
hardware/chisel/src/main/scala/hls/: example_axis.scala  example_axis_eval.scala
hardware/chisel/src/main/scala/hls/blackboxes/: Axi4Master.scala  AxiliteExample.scala  Fetch.scala
hardware/chisel/src/main/scala/shell/: Configs.scala  SimShell.scala
hardware/chisel/src/main/scala/test/: PokeModules.scala  Test.scala  TestAxi4Master.scala  TestAxiLiteClient.scala  TestAxisWithC.scala  TestFetchHLS.scala
hardware/chisel/src/main/scala/util/: ModuleWithAxiSupport.scala
hardware/chisel/src/main/scala/vta/: Configs.scala
hardware/chisel/src/test/scala/unittest/: SyncQueueTest.scala
hardware/dpi/: tsim_device.cc
hardware/hls_dpi/: CMakeLists.txt  hls_dpi_test.cc  hls_tsim_device.cc
hardware/xilinx/: CMakeLists.txt
hardware/xilinx/scripts/: hls.tcl  vivado.tcl  zc7020.tcl
hardware/xilinx/src/: vta.cc
include/vta/: driver.h  hw_spec_const.h  sim_tlpp.h
include/vta/chisel_eval/: chisel_driver.h
include/vta/dpi/: tsim.h
include/vta/hls_dpi/: hls_tsim_device.h
src/chisel_eval/: chisel_driver.cc  chisel_eval.cc  chisel_eval.cpp  chisel_eval_test.cc
src/dpi/: module.cc
src/sim/: sim_driver.cc  sim_tlpp.cc
src/tvm_runtime/: tvm_runtime_pack.cc
tests/hardware/common/: test_lib.cc
tests/scripts/: docker_run_verilator.bat
tvm_apps/: test_verilator_ops.py
tvm_apps/test_verilator/: infrastructure.py
vta/python/: chisel_dpi_runner.py  convolution_opt.py  deploy_classification.py  deploy_detection.py  matrix_multiply.py  my_vta_pipeline.py  tune_relay_vta.py  vta_get_started.py  vta_softmax.py
vta/python/vta/: autotvm.py  build_module.py  environment.py  intrin.py  transform.py
vta/python/vta/exec/: rpc_server.py
vta/python/vta/testing/: simulator.py
vta/runtime/: device_api.cc  runtime.cc  runtime.h
